Fixed Cart width on mobile view

--- a/src/Components/Cart/cart.scss
+++ b/src/Components/Cart/cart.scss
@@ -5,7 +5,8 @@
     top:50%;
     background: #fff;
     // padding:10px;
-    width: 350px;
+    max-width: 350px;
+    width: 100%;
     margin:20px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.219);
     border-radius:20px ;
